src/core-crm/objects/BuyerGroup/BuyerGroup.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>