src/core-crm/objects/BuyerGroup/fields/Mark_Design_as_Complete__c.field-meta.xml
<CustomField>
    <fullName>Mark_Design_as_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to mark design as complete</description>
    <label>Mark Design as Complete</label>
    <type>Checkbox</type>
</CustomField>