src/core-crm/objects/BuyerGroup/fields/Primary_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Account that’s link to the Standing Offer Arrangement</description>
    <label>Primary Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Buyer Groups</relationshipLabel>
    <relationshipName>Buyer_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>