src/core-crm/objects/BuyerGroup/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QUTeX Learning Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>