src/core-crm/objects/BuyerGroup/fields/Product_Request__c.field-meta.xml
<CustomField>
    <fullName>Product_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the parent Standing Offer Arrangement Product request</description>
    <label>Product Request</label>
    <referenceTo>Product_Request__c</referenceTo>
    <relationshipLabel>Buyer Groups</relationshipLabel>
    <relationshipName>Buyer_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>