src/core-crm/objects/BuyerGroup/fields/Publishing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Publishing_Start_Date__c</fullName>
    <label>Publishing Start Date</label>
    <type>Date</type>
</CustomField>