src/core-crm/objects/BuyerGroup/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of the design of the product</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>